tests/toylang/neg/001628_mutation.toylang
program a = { while a do sleep a; } .
